# usv_ros

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  PRODUCT.md  README.en.md  README.md  TESTING.md  package.xml
config/: usv_params.yaml
frontend/: .impeccable.md  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
launch/: usv_bringup.launch
scripts/: common_env.sh  create_hotspot_update.bat  import_hotspot_update.sh  install_boot_service.sh  install_usv_commands.sh  lab_sim_node.py  map_network_fetch.py  map_pack_delta.py  map_pack_export.py  map_pack_format.py  map_pack_import.py  map_pack_journal.py  map_resources.bat  map_resources.sh  map_tile_cache.py  map_tile_store.py  mavlink_topic_tap.py  mavlink_trigger_node.py  mission_coordinator_node.py  mission_plan_service.py  named_value_float_probe.py  preset_manager.py  pump_control_node.py  restart_usv_all.sh  setup_hotspot.sh  spectrometer_node.py  start_ros_master.sh  start_usv_all.sh  start_usv_minimal.sh  start_usv_system.sh  status_usv_all.sh  stop_hotspot.sh  stop_usv_all.sh  system_health_node.py  test_real_usv_serial.py  test_web_server.sh  uninstall_boot_service.sh  usv_boot_start.sh  usv_boot_stop.sh  usv_mavlink_bridge.py  (+4 more)
srv/: ControlCommand.srv
static/: index.html  test.html
static/js/: main.js
tests/: pollution_map_fixtures.py  test_boot_service_scripts.py  test_calibrated_zero_command.py  test_hardware_runtime_sync.py  test_lab_auto_scan_api.py  test_lab_coordinate_migration.py  test_lab_page_contract.py  test_lab_sampling_event_storage.py  test_lab_sim_calibration.py  test_lab_sim_coordinates.py  test_lab_sim_droplets.py  test_lab_sim_models.py  test_lab_sim_pollution_field.py  test_lab_sim_route_planner.py  test_lab_sim_sampling_service.py  test_lab_sim_sampling_state.py  test_lab_sim_vessel_model.py  test_lab_surface_export.py  test_map_module_split.py  test_map_network_fetch.py  test_map_pack_delta.py  test_map_pack_export_blank_tiles.py  test_map_pack_format_v2.py  test_map_pack_journal.py  (+9 more)
(+121 files in other folders)
